syntax = "proto3";

package api.blog.v1;

option go_package = "blog/api/blog/v1;v1";
option java_multiple_files = true;
option java_package = "api.blog.v1";

service Comment {
    rpc CreateComment (CreateCommentRequest) returns (CreateCommentReply);
    rpc UpdateComment (UpdateCommentRequest) returns (UpdateCommentReply);
    rpc DeleteComment (DeleteCommentRequest) returns (DeleteCommentReply);
    rpc GetComment (GetCommentRequest) returns (GetCommentReply);
    rpc ListComment (ListCommentRequest) returns (ListCommentReply);
}

message CreateCommentRequest {
    string name = 1;
    string content = 2;
}
message CreateCommentReply {}

message UpdateCommentRequest {}
message UpdateCommentReply {}

message DeleteCommentRequest {}
message DeleteCommentReply {}

message GetCommentRequest {}
message GetCommentReply {}

message ListCommentRequest {}
message ListCommentReply {}